# dpdk

config/arm/: arm64_realtek_linux_gcc  meson.build
drivers/bus/platform/: meson.build  platform_common.c  platform_common_uio.c  private.h  rte_bus_platform.h  version.map
drivers/bus/platform/linux/: platform.c  platform_uio.c
drivers/net/: meson.build
drivers/net/rtk/: meson.build  rtk_ethdev.c  rtk_ethdev.h  rtk_logs.h  rtk_rxtx.c
lib/: meson.build
lib/ethdev/: ethdev_platform.h
lib/platform/: meson.build  rte_platform.c  rte_platform.h  version.map
